--- a/variables/Views/Home/Index.cshtml
+++ b/variables/Views/Home/Index.cshtml
@@ -1,11 +1,9 @@
-﻿<!DOCTYPE html>
-<html>
+﻿@{
+    ViewData["Title"] = "Home Page";
+}
 
-<head>
+<div id="myDiv" class="text-center">
 
-</head>
+</div>
 
-<body>
-    <script src="~/js/varScript.js"></script>
-</body>
-</html>
+<script src="~/js/varScript.js"></script>
